update source code and dependencies